[package]
authors = ["zpp0196 <zpp0196@gmail.com>"]
edition = "2021"
name = "hello-aarch64-wifi-adb"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
openssl = {version = "0.10", features = ["vendored"]}
